tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__footer_hint_row_is_separated_from_composer.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                        "
"› Assign new task to CodexPotter        "
"                                        "
"                                        "
"                                        "
"  100% context left                     "
